Git Tests/force-app/main/default/default/objects/Meta__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria comercial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
                <label>REFERENCIA</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>GENERICO</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>MATERIAIS</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NUTRICAO</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>MEDCTECH</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>EQUIPAMENTO</label>
            </value>
            <value>
                <fullName>O</fullName>
                <default>true</default>
                <label>NAO MERCADORIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>