Git Tests/force-app/main/default/default/objects/Meta__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Código da meta</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>