Git Tests/force-app/main/default/default/objects/Meta__c/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <label>Gerente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>