Git Tests/force-app/main/default/default/objects/Meta__c/fields/Mesa__c.field-meta.xml
<CustomField>
    <fullName>Mesa__c</fullName>
    <label>Mesa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>