Git Tests/force-app/main/default/default/objects/Meta__c/fields/MesMeta__c.field-meta.xml
<CustomField>
    <fullName>MesMeta__c</fullName>
    <label>Mês da meta</label>
    <type>Date</type>
</CustomField>