Git Tests/force-app/main/default/default/objects/Meta__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>