Git Tests/force-app/main/default/default/objects/Meta__c/fields/MetaVazia__c.field-meta.xml
<CustomField>
    <fullName>MetaVazia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meta Vazia</label>
    <type>Checkbox</type>
</CustomField>