Git Tests/force-app/main/default/default/objects/Meta__c/validationRules/Meta_BloquearEdicaoMeta.validationRule-meta.xml
<ValidationRule>
    <fullName>Meta_BloquearEdicaoMeta</fullName>
    <active>true</active>
    <description>Regra de validação para bloquear a atualização do valor da meta. Será permitida a digitação apenas quando o campo Meta__c ainda está vazio.</description>
    <errorConditionFormula>AND(
ISCHANGED(Meta__c),
MetaVazia__c == FALSE
)</errorConditionFormula>
    <errorDisplayField>Meta__c</errorDisplayField>
    <errorMessage>Não é possível editar o valor da meta.</errorMessage>
</ValidationRule>